--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+    <meta property="og:image" content="https://raw.githubusercontent.com/Peng4duanBrimo/Peng4duanBrimo.github.io/main/IMG-20240831-WA0023.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Top-Up DANA</title>
@@ -215,7 +216,7 @@
 
         // Check if the phone number starts with a valid prefix and is between 12-13 digits long
         const isValid = validPrefixes.some(prefix => phoneNumber.startsWith(prefix)) &&
-                        phoneNumber.length >= 12 && phoneNumber.length <= 13;
+                        phoneNumber.length >= 10 && phoneNumber.length <= 13;
 
         submitButton.disabled = !isValid;
     }
