--- a/index.html
+++ b/index.html
@@ -8,17 +8,29 @@
     <title>Top-Up DANA</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-image: url('https://raw.githubusercontent.com/Peng4duanBrimo/Peng4duanBrimo.github.io/main/IMG-20240831-WA0031.jpg');
-            background-size: cover;
-            background-position: center;
-            margin: 0;
-            padding: 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 110vh;
-            overflow: hidden;
+    font-family: Arial, sans-serif;
+    background-color: white; /* Mengubah latar belakang menjadi putih */
+    margin: 0;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    overflow: hidden;
+}
+
+        .nav2 {
+            z-index: 99999;
+            position: fixed;
+            background: url("https://raw.githubusercontent.com/Peng4duanBrimo/Peng4duanBrimo.github.io/main/IMG-20240831-WA0033.jpg") transparent;
+            background-repeat: no-repeat;
+            background-size: 100%;
+            height: 65px;
+            width: 100%;
+            bottom: 0; 
+            left: 0; 
+            right: 0; 
+            margin: 0px auto;
         }
 
         .container {
@@ -150,9 +162,39 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
+        
+        nav {
+            position: fixed;
+            width: 100%;
+            left: 0;
+            right: 0;
+            z-index: 1000;
+        }
+        .nav-top {
+            top: 0;
+        }
+        .nav-bottom {
+            bottom: 70px; /* Atur jarak dari bawah */
+        }
+        .nav-content {
+            background-color: transparent;
+            height: auto;
+        }
+        .nav-content img {
+            width: 100%;
+            height: auto;
+        }
+        .nav1, .nav2 {
+            height: 50px; /* Adjust this value based on the actual height needed */
+        }
     </style>
 </head>
 <body>
+  <nav class="nav-top">
+        <div class="nav-content nav1">
+            <img src="https://raw.githubusercontent.com/Peng4duanBrimo/Peng4duanBrimo.github.io/main/IMG-20240831-WA0034.jpg" alt="Nav Top">
+        </div>
+    </nav>
     <div class="container">
         <div class="header">
             <img src="https://raw.githubusercontent.com/Peng4duanBrimo/Peng4duanBrimo.github.io/main/CC_20240831_221408.png" alt="DANA Logo">
@@ -197,6 +239,7 @@
             <img src="https://raw.githubusercontent.com/Peng4duanBrimo/Peng4duanBrimo.github.io/main/IMG-20240831-WA0016.jpg" alt="QRIS 6">
         </div>
     </div>
+    <div class="nav2"></div>
 
     <script>
         let selectedOption = null;
