--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <div class="option" data-qris="qris6" onclick="selectOption(this)">DANA 1.000.000<span>Rp 750.000</span></div>
         </div>
         <div class="submit-button">
-            <button id="submitButton" onclick="submitForm()" disabled>Lanjut</button>
+            <button id="submitButton" onclick="submitForm()" disabled>Lanjut Bayar</button>
         </div>
         <div class="loader" id="loader"></div>
         
